# Sports-Spoiler-Free-Detector

./: .gitignore  README.md  main.py  pyproject.toml
crawling/: google_api_crawling.py  util.py
feature_extractor/: extractor.py  util.py
feature_extractor/object_detection/: dino_detector.py
feature_extractor/pose_detection/: yolo26_detector.py
feature_extractor/token_classification/: gliner2_detector.py  nuzero_detector.py
preprocessing/: easy_ocr_processor.py
